unpackaged/main/default/objects/Scheduled_Payment__c/fields/Net_to_NF__c.field-meta.xml
<CustomField>
    <fullName>Net_to_NF__c</fullName>
    <formula>Amount__c - Contingency__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Net to NF</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>