unpackaged/main/default/objects/Scheduled_Payment__c/fields/Payment_Agreement__c.field-meta.xml
<CustomField>
    <fullName>Payment_Agreement__c</fullName>
    <label>Payment Agreement</label>
    <referenceTo>Payment_Agreement__c</referenceTo>
    <relationshipLabel>Scheduled Payments</relationshipLabel>
    <relationshipName>Scheduled_Payments</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>