unpackaged/main/default/objects/Scheduled_Payment__c/fields/Payment_Schedule_Index__c.field-meta.xml
<CustomField>
    <fullName>Payment_Schedule_Index__c</fullName>
    <description>Number that identifies what schedule the scheduled payment belongs to. Set via flow.</description>
    <label>Payment Schedule Index</label>
    <length>255</length>
    <type>Text</type>
</CustomField>